--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Julia\\Anaconda3\\envs\\macro_mate\\python.exe"
+    "python.pythonPath": "/Users/markmorrison/anaconda3/envs/macro_mate/bin/python"
 }
