--- a/environment.yml
+++ b/environment.yml
@@ -3,38 +3,39 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - autopep8=1.4.4=py_0
-  - ca-certificates=2019.11.28=hecc5488_0
-  - certifi=2019.11.28=py37_0
-  - django=2.1.5=py37_0
-  - django-taggit=0.24.0=py_0
-  - freetype=2.9.1=hb4e5f40_0
-  - jpeg=9b=he5867d9_2
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - libpng=1.6.37=ha441bb4_0
-  - libtiff=4.1.0=hcb84e12_0
-  - ncurses=6.2=h0a44026_0
-  - olefile=0.46=py37_0
-  - openssl=1.1.1d=h0b31af3_0
-  - pillow=7.0.0=py37h4655f20_0
-  - pip=20.0.2=py37_1
-  - pycodestyle=2.5.0=py37_0
-  - python=3.7.5=h359304d_0
-  - pytz=2019.3=py_0
-  - readline=7.0=h1de35cc_5
-  - setuptools=45.2.0=py37_0
-  - sqlite=3.31.1=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - wheel=0.34.2=py37_0
-  - xz=5.2.4=h1de35cc_4
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.3.7=h5bba6e5_0
+  - autopep8=1.4.4
+  - ca-certificates=2019.11.28
+  - certifi=2019.11.28
+  - django=2.1.5
+  - django-taggit=0.24.0
+  - freetype=2.9.1
+  - jpeg=9b
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - libpng=1.6.37
+  - libtiff=4.1.0
+  - ncurses=6.2
+  - olefile=0.46
+  - openssl=1.1.1d
+  - pillow=7.0.0
+  - pip=20.0.2
+  - pycodestyle=2.5.0
+  - python=3.7.5
+  - pytz=2019.3
+  - readline=7.0
+  - setuptools=45.2.0
+  - sqlite=3.31.1
+  - tk=8.6.8
+  - wheel=0.34.2
+  - xz=5.2.4
+  - zlib=1.2.11
+  - zstd=1.3.7
   - pip:
     - django-braces==1.14.0
     - django-model-utils==4.0.0
+    - django-multiselectfield==0.1.12
     - django-star-ratings==0.9.1
     - six==1.14.0
     - swapper==1.1.2.post1
