--- a/environment.yml
+++ b/environment.yml
@@ -2,9 +2,40 @@ name: macro_mate
 channels:
   - defaults
 dependencies:
+  - autopep8=1.4.4
+  - ca-certificates=2019.11.28
+  - certifi=2019.11.28
+  - django=2.1.5
+  - django-taggit=0.24.0
+  - freetype=2.9.1
+  - jpeg=9b
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - libpng=1.6.37
+  - libtiff=4.1.0
+  - lorem=0.1.1
+  - ncurses=6.2
+  - olefile=0.46
+  - openssl=1.1.1d
+  - pillow=7.0.0
+  - pip=20.0.2
+  - pycodestyle=2.5.0
   - python=3.7.5
-  - django==2.1.5
-  - pillow
-  - autopep8
-prefix: /opt/anaconda3/envs/macro_mate
-
+  - pytz=2019.3
+  - readline=7.0
+  - setuptools=45.2.0
+  - sqlite=3.31.1
+  - tk=8.6.8
+  - wheel=0.34.2
+  - xz=5.2.4
+  - zlib=1.2.11
+  - zstd=1.3.7
+  - pip:
+      - django-braces==1.14.0
+      - django-model-utils==4.0.0
+      - django-multiselectfield==0.1.12
+      - django-star-ratings==0.9.1
+      - six==1.14.0
+      - swapper==1.1.2.post1
