--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - libffi=3.2.1
   - libpng=1.6.37
   - libtiff=4.1.0
+  - lorem=0.1.1
   - ncurses=6.2
   - olefile=0.46
   - openssl=1.1.1d
@@ -33,11 +34,10 @@ dependencies:
   - zlib=1.2.11
   - zstd=1.3.7
   - pip:
-    - django-braces==1.14.0
-    - django-model-utils==4.0.0
-    - django-multiselectfield==0.1.12
-    - django-star-ratings==0.9.1
-    - six==1.14.0
-    - swapper==1.1.2.post1
-prefix: /opt/anaconda3/envs/macro_mate
+      - django-braces==1.14.0
+      - django-model-utils==4.0.0
+      - django-multiselectfield==0.1.12
+      - django-star-ratings==0.9.1
+      - six==1.14.0
+      - swapper==1.1.2.post1
 
